tests/idris2/coverage/impossible005/expected
1/1: Building Main (Main.idr)
Warning: Main:2:10--2:13:Int does not match expected type

Main:2:10--2:13
 1 | matchInt : () -> Void
 2 | matchInt Int impossible
              ^^^

Warning: Main:5:12--5:18:%World does not match expected type

Main:5:12--5:18
 1 | matchInt : () -> Void
 2 | matchInt Int impossible
 3 |
 4 | matchWorld : () -> Void
 5 | matchWorld %World impossible
                ^^^^^^

Error: matchInt is not covering.

Main:1:1--1:22
 1 | matchInt : () -> Void
     ^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    matchInt _

Error: matchWorld is not covering.

Main:4:1--4:24
 1 | matchInt : () -> Void
 2 | matchInt Int impossible
 3 |
 4 | matchWorld : () -> Void
     ^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    matchWorld _

